add library to Nite-test dir & compile with pthread

--- a/EyeOnYouDepthCam/doc/NiTE-test/Samples/UserViewer/Makefile
+++ b/EyeOnYouDepthCam/doc/NiTE-test/Samples/UserViewer/Makefile
@@ -28,5 +28,9 @@ CFLAGS += -Wall
 # TingYuan: compile with c++ to support <thread.h>
 CFLAGS += -std=c++11
 
+# ChihHsiang: compile with c++ to support <pthread.h>
+LDFLAGS += -lpthread
+
+
 include ../BuildSystem/CommonCppMakefile
 	
